parser/EventBParser.py
# Generated from EventB.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class EventBParser ( Parser ):

    grammarFileName = "EventB.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "':='", "'('", "')'", "'|->'", 
                     "'.'", "'|'", "'||'", "'@'", "';'", "'CONTEXT'", "'SETS'", 
                     "'CONSTANTS'", "'END'", "'MACHINE'", "'SEES'", "'VARIABLES'", 
                     "'INVARIANTS'", "'INITIALISATION'", "'EVENT'", "'WEIGHT'", 
                     "'WHERE'", "'THEN'", "'ANY'", "'PROPERTIES'", "'Nat'", 
                     "'Int'", "'Bool'", "'**'", "'POW'", "'empty'", "'emptyrel'", 
                     "'dom'", "'ran'", "'card'", "'<|'", "'<+'", "'|>'", 
                     "'..'", "'<:'", "':'", "'/:'", "'\\s/'", "'/s\\'", 
                     "'True'", "'False'", "'/\\'", "'\\/'", "'+'", "'-'", 
                     "'*'", "'/'", "<INVALID>", "<INVALID>", "'mod'", "'='", 
                     "'<>'", "<INVALID>", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "CONTEXT", "SETS", "CONSTANTS", "END", "MACHINE", 
                      "SEES", "VARIABLES", "INVARIANTS", "INITIALISATION", 
                      "EVENT", "WEIGHT", "WHERE", "THEN", "ANY", "PROPERTIES", 
                      "TyNAT", "TyINT", "TyBOOL", "CARTPROD", "POWERSET", 
                      "EMPTY", "EMPTYREL", "DOM", "RAN", "CARD", "DOMRES", 
                      "OVERR", "RANRES", "INTRANGE", "INCHOICE", "IN", "NOTIN", 
                      "UNION", "INTERSECTION", "TRUE", "FALSE", "CONJ", 
                      "DISJ", "PLUS", "MINUS", "TIMES", "DIV", "INT", "FLOAT", 
                      "MOD", "EQ", "NEQ", "RELSYM", "SEP", "WHITESPACE", 
                      "NEWLINE", "ID", "COMMENT" ]

    RULE_model = 0
    RULE_context = 1
    RULE_setdef = 2
    RULE_setdecl = 3
    RULE_listID = 4
    RULE_ctedef = 5
    RULE_typeT = 6
    RULE_btype = 7
    RULE_ptype = 8
    RULE_stype = 9
    RULE_val = 10
    RULE_bvalue = 11
    RULE_boolV = 12
    RULE_pvalue = 13
    RULE_svalue = 14
    RULE_blvalue = 15
    RULE_svaluelist = 16
    RULE_lvalue = 17
    RULE_machine = 18
    RULE_vardecl = 19
    RULE_invdef = 20
    RULE_simplassg = 21
    RULE_initst = 22
    RULE_expr = 23
    RULE_eventdecl = 24
    RULE_anydecl = 25
    RULE_anyvardef = 26
    RULE_anyrange = 27
    RULE_intrange = 28
    RULE_strrange = 29
    RULE_setrange = 30
    RULE_wheredecl = 31
    RULE_evassg = 32
    RULE_probassg = 33
    RULE_probexpr = 34
    RULE_problist = 35
    RULE_props = 36
    RULE_proplist = 37
    RULE_prop = 38

    ruleNames =  [ "model", "context", "setdef", "setdecl", "listID", "ctedef", 
                   "typeT", "btype", "ptype", "stype", "val", "bvalue", 
                   "boolV", "pvalue", "svalue", "blvalue", "svaluelist", 
                   "lvalue", "machine", "vardecl", "invdef", "simplassg", 
                   "initst", "expr", "eventdecl", "anydecl", "anyvardef", 
                   "anyrange", "intrange", "strrange", "setrange", "wheredecl", 
                   "evassg", "probassg", "probexpr", "problist", "props", 
                   "proplist", "prop" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    CONTEXT=12
    SETS=13
    CONSTANTS=14
    END=15
    MACHINE=16
    SEES=17
    VARIABLES=18
    INVARIANTS=19
    INITIALISATION=20
    EVENT=21
    WEIGHT=22
    WHERE=23
    THEN=24
    ANY=25
    PROPERTIES=26
    TyNAT=27
    TyINT=28
    TyBOOL=29
    CARTPROD=30
    POWERSET=31
    EMPTY=32
    EMPTYREL=33
    DOM=34
    RAN=35
    CARD=36
    DOMRES=37
    OVERR=38
    RANRES=39
    INTRANGE=40
    INCHOICE=41
    IN=42
    NOTIN=43
    UNION=44
    INTERSECTION=45
    TRUE=46
    FALSE=47
    CONJ=48
    DISJ=49
    PLUS=50
    MINUS=51
    TIMES=52
    DIV=53
    INT=54
    FLOAT=55
    MOD=56
    EQ=57
    NEQ=58
    RELSYM=59
    SEP=60
    WHITESPACE=61
    NEWLINE=62
    ID=63
    COMMENT=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ModelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def context(self):
            return self.getTypedRuleContext(EventBParser.ContextContext,0)


        def machine(self):
            return self.getTypedRuleContext(EventBParser.MachineContext,0)


        def props(self):
            return self.getTypedRuleContext(EventBParser.PropsContext,0)


        def getRuleIndex(self):
            return EventBParser.RULE_model

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModel" ):
                listener.enterModel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModel" ):
                listener.exitModel(self)




    def model(self):

        localctx = EventBParser.ModelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_model)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.context()
            self.state = 79
            self.machine()
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==EventBParser.PROPERTIES:
                self.state = 80
                self.props()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContextContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTEXT(self):
            return self.getToken(EventBParser.CONTEXT, 0)

        def ID(self):
            return self.getToken(EventBParser.ID, 0)

        def SETS(self):
            return self.getToken(EventBParser.SETS, 0)

        def CONSTANTS(self):
            return self.getToken(EventBParser.CONSTANTS, 0)

        def END(self):
            return self.getToken(EventBParser.END, 0)

        def setdef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EventBParser.SetdefContext)
            else:
                return self.getTypedRuleContext(EventBParser.SetdefContext,i)


        def ctedef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EventBParser.CtedefContext)
            else:
                return self.getTypedRuleContext(EventBParser.CtedefContext,i)


        def getRuleIndex(self):
            return EventBParser.RULE_context

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContext" ):
                listener.enterContext(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContext" ):
                listener.exitContext(self)




    def context(self):

        localctx = EventBParser.ContextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_context)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(EventBParser.CONTEXT)
            self.state = 84
            self.match(EventBParser.ID)
            self.state = 85
            self.match(EventBParser.SETS)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==EventBParser.ID:
                self.state = 86
                self.setdef()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(EventBParser.CONSTANTS)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==EventBParser.ID:
                self.state = 93
                self.ctedef()
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 99
            self.match(EventBParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetdefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(EventBParser.ID, 0)

        def IN(self):
            return self.getToken(EventBParser.IN, 0)

        def setdecl(self):
            return self.getTypedRuleContext(EventBParser.SetdeclContext,0)


        def getRuleIndex(self):
            return EventBParser.RULE_setdef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetdef" ):
                listener.enterSetdef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetdef" ):
                listener.exitSetdef(self)




    def setdef(self):

        localctx = EventBParser.SetdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_setdef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(EventBParser.ID)
            self.state = 102
            self.match(EventBParser.IN)
            self.state = 103
            self.setdecl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(EventBParser.INT, 0)

        def listID(self):
            return self.getTypedRuleContext(EventBParser.ListIDContext,0)


        def getRuleIndex(self):
            return EventBParser.RULE_setdecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetdecl" ):
                listener.enterSetdecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetdecl" ):
                listener.exitSetdecl(self)




    def setdecl(self):

        localctx = EventBParser.SetdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_setdecl)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [EventBParser.INT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.match(EventBParser.INT)
                pass
            elif token in [EventBParser.T__0]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.match(EventBParser.T__0)
                self.state = 107
                self.listID()
                self.state = 108
                self.match(EventBParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListIDContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(EventBParser.ID, 0)

        def SEP(self):
            return self.getToken(EventBParser.SEP, 0)

        def listID(self):
            return self.getTypedRuleContext(EventBParser.ListIDContext,0)


        def getRuleIndex(self):
            return EventBParser.RULE_listID

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListID" ):
                listener.enterListID(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListID" ):
                listener.exitListID(self)




    def listID(self):

        localctx = EventBParser.ListIDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_listID)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.match(EventBParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.match(EventBParser.ID)
                self.state = 114
                self.match(EventBParser.SEP)
                self.state = 115
                self.listID()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CtedefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(EventBParser.ID, 0)

        def IN(self):
            return self.getToken(EventBParser.IN, 0)

        def typeT(self):
            return self.getTypedRuleContext(EventBParser.TypeTContext,0)


        def val(self):
            return self.getTypedRuleContext(EventBParser.ValContext,0)


        def getRuleIndex(self):
            return EventBParser.RULE_ctedef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCtedef" ):
                listener.enterCtedef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCtedef" ):
                listener.exitCtedef(self)




    def ctedef(self):

        localctx = EventBParser.CtedefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ctedef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(EventBParser.ID)
            self.state = 119
            self.match(EventBParser.IN)
            self.state = 120
            self.typeT()
            self.state = 121
            self.match(EventBParser.T__2)
            self.state = 122
            self.val()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeTContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def btype(self):
            return self.getTypedRuleContext(EventBParser.BtypeContext,0)


        def ptype(self):
            return self.getTypedRuleContext(EventBParser.PtypeContext,0)


        def stype(self):
            return self.getTypedRuleContext(EventBParser.StypeContext,0)


        def getRuleIndex(self):
            return EventBParser.RULE_typeT

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeT" ):
                listener.enterTypeT(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeT" ):
                listener.exitTypeT(self)




    def typeT(self):

        localctx = EventBParser.TypeTContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typeT)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.btype()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.ptype()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.stype()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BtypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TyNAT(self):
            return self.getToken(EventBParser.TyNAT, 0)

        def TyINT(self):
            return self.getToken(EventBParser.TyINT, 0)

        def TyBOOL(self):
            return self.getToken(EventBParser.TyBOOL, 0)

        def ID(self):
            return self.getToken(EventBParser.ID, 0)

        def getRuleIndex(self):
            return EventBParser.RULE_btype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBtype" ):
                listener.enterBtype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBtype" ):
                listener.exitBtype(self)




    def btype(self):

        localctx = EventBParser.BtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_btype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << EventBParser.TyNAT) | (1 << EventBParser.TyINT) | (1 << EventBParser.TyBOOL) | (1 << EventBParser.ID))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PtypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def btype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EventBParser.BtypeContext)
            else:
                return self.getTypedRuleContext(EventBParser.BtypeContext,i)


        def CARTPROD(self):
            return self.getToken(EventBParser.CARTPROD, 0)

        def getRuleIndex(self):
            return EventBParser.RULE_ptype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPtype" ):
                listener.enterPtype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPtype" ):
                listener.exitPtype(self)




    def ptype(self):

        localctx = EventBParser.PtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ptype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.btype()
            self.state = 132
            self.match(EventBParser.CARTPROD)
            self.state = 133
            self.btype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def POWERSET(self):
            return self.getToken(EventBParser.POWERSET, 0)

        def btype(self):
            return self.getTypedRuleContext(EventBParser.BtypeContext,0)


        def ptype(self):
            return self.getTypedRuleContext(EventBParser.PtypeContext,0)


        def getRuleIndex(self):
            return EventBParser.RULE_stype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStype" ):
                listener.enterStype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStype" ):
                listener.exitStype(self)




    def stype(self):

        localctx = EventBParser.StypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_stype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(EventBParser.POWERSET)
            self.state = 136
            self.match(EventBParser.T__3)
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 137
                self.btype()
                pass

            elif la_ == 2:
                self.state = 138
                self.ptype()
                pass


            self.state = 141
            self.match(EventBParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bvalue(self):
            return self.getTypedRuleContext(EventBParser.BvalueContext,0)


        def pvalue(self):
            return self.getTypedRuleContext(EventBParser.PvalueContext,0)


        def lvalue(self):
            return self.getTypedRuleContext(EventBParser.LvalueContext,0)


        def getRuleIndex(self):
            return EventBParser.RULE_val

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVal" ):
                listener.enterVal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVal" ):
                listener.exitVal(self)




    def val(self):

        localctx = EventBParser.ValContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_val)
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.bvalue()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.pvalue()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 145
                self.lvalue()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BvalueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(EventBParser.INT, 0)

        def boolV(self):
            return self.getTypedRuleContext(EventBParser.BoolVContext,0)


        def ID(self):
            return self.getToken(EventBParser.ID, 0)

        def getRuleIndex(self):
            return EventBParser.RULE_bvalue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBvalue" ):
                listener.enterBvalue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBvalue" ):
                listener.exitBvalue(self)




    def bvalue(self):

        localctx = EventBParser.BvalueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_bvalue)
        try:
            self.state = 151
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [EventBParser.INT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.match(EventBParser.INT)
                pass
            elif token in [EventBParser.TRUE, EventBParser.FALSE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 149
                self.boolV()
                pass
            elif token in [EventBParser.ID]:
                self.enterOuterAlt(localctx, 3)
                self.state = 150
                self.match(EventBParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolVContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(EventBParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(EventBParser.FALSE, 0)

        def getRuleIndex(self):
            return EventBParser.RULE_boolV

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolV" ):
                listener.enterBoolV(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolV" ):
                listener.exitBoolV(self)




    def boolV(self):

        localctx = EventBParser.BoolVContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_boolV)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            _la = self._input.LA(1)
            if not(_la==EventBParser.TRUE or _la==EventBParser.FALSE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PvalueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bvalue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EventBParser.BvalueContext)
            else:
                return self.getTypedRuleContext(EventBParser.BvalueContext,i)


        def getRuleIndex(self):
            return EventBParser.RULE_pvalue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPvalue" ):
                listener.enterPvalue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPvalue" ):
                listener.exitPvalue(self)




    def pvalue(self):

        localctx = EventBParser.PvalueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_pvalue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.bvalue()
            self.state = 156
            self.match(EventBParser.T__5)
            self.state = 157
            self.bvalue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SvalueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
